fix: remove extra page scrollbar

--- a/site/src/styles.css
+++ b/site/src/styles.css
@@ -6,11 +6,11 @@
   html,
   body,
   #root {
-    min-height: 100%;
+    height: 100%;
   }
 
   body {
-    @apply m-0 bg-slate-50 font-sans text-slate-900 antialiased;
+    @apply m-0 overflow-hidden bg-slate-50 font-sans text-slate-900 antialiased;
   }
 
   * {
